deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-express
  labels:
    app: guestbook-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook-express
  template:
    metadata:
      labels:
        app: guestbook-express
    spec:
      containers:
      - name: guestbook-express
        image: guestbook-express:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook-express-service
spec:
  type: NodePort
  selector:
    app: guestbook-express
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-mongo
  labels:
    app: guestbook-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guestbook-mongo
  template:
    metadata:
      labels:
        app: guestbook-mongo
    spec:
      containers:
      - name: guestbook-mongo
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: guestbook-mongo-storage
          mountPath: /data/db
      volumes:
      - name: guestbook-mongo-storage
        persistentVolumeClaim:
          claimName: guestbook-mongo-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: guestbook-mongo-service
spec:
  selector:
    app: guestbook-mongo
  ports:
    - protocol: TCP
      port: 27017
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-express-service
            port:
              number: 80
